# ViT_DINO

./: .gitignore  README.md  pyproject.toml  requirements.txt
Eval/: test_forward.py  test_param_count.py
ViT_Dino/: train_dino.py
ViT_Dino/configs/: dino_vitb12.yaml
downstream/: extract_features.py  linear_probe.py  run_sanity.py
src/vitdino/dino/: engine.py  loss.py
src/vitdino/models/: vit.py
